# life-mb2

./: Cargo.toml  LICENSE  README.md
src/: main.rs
