[package]
name = "life-mb2"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
microbit-v2 = "0.16"
nanorand = { version = "0.8.0", default-features = false, features = ["pcg64"] }
panic-halt = "1.0.0"
panic-rtt-target = "0.2"
rtt-target = "0.6"

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[features]
slow = []

[[bin]]
name = "life-mb2"
path = "src/main.rs"
test = false
doctest = false
bench = false
